<resources>
    <string name="app_name">NoteBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email_number">Email/Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email_address">Email</string>
    <string name="phone_number">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="photos">Photos</string>
</resources>