<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_menu_backgroung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSingin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="37dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/user_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSingin" />

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_number"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:autofillHints="emailAddress"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/userIcon"
            app:layout_constraintEnd_toEndOf="@id/textSingin"
            app:layout_constraintStart_toEndOf="@+id/userIcon"
            app:layout_constraintTop_toTopOf="@+id/userIcon" />

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="37dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userIcon" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:autofillHints="password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/passwordIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/passwordIcon"
            app:layout_constraintTop_toTopOf="@+id/passwordIcon" />

        <ImageView
            android:id="@+id/forwardBottonIcon"
            android:layout_width="37dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/textSingUp"
        app:layout_constraintStart_toStartOf="@id/menu_background"
        app:layout_constraintBottom_toBottomOf="@id/textSingUp"/>
    <TextView
        android:id="@+id/textSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/intro_background"
        android:padding="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/menu_background"
        app:layout_constraintEnd_toEndOf="@id/menu_background"/>



</androidx.constraintlayout.widget.ConstraintLayout>